Created frame. - add configs support - add authenticator support - add dependencies for testing
